# raylib_game

./: .gitignore  CMakeLists.txt  oak_woods_tileset.tsx  raylib_game.tiled-session
assets/decorations/: fence_1.tsx  lamp.tsx  rock_1.tsx  rock_2.tsx  rock_3.tsx  sign.tsx
assets/enemies/skeleton/: Skeleton Attack.ase  Skeleton Dead.ase  Skeleton Hit.ase  Skeleton Idle.ase  Skeleton React.ase  Skeleton Walk.ase
assets/levels/: level1.tmx  level1.txt
assets/levels/level1/: level1.txt
assets/tiled/: Chest Animation 1.tsj  Skeleton Idle.tsj  boss1.tsj  bronze_coin.tsj  decorations.json  decorations.tsj  level1.json  oak_woods_tileset.json  raylib_game.tiled-session  shop.json
assets/village/: Chest Animation 1.ase
src/: animation.cpp  animation.h  block.cpp  chest.cpp  chest.h  colors.h  config.h  event.cpp  event.h  game.cpp  game.h  ground_grass.cpp  level_loader.cpp  level_manager.cpp  level_manager.h  main.cpp  menu.cpp  menu.h  player.cpp  player.h  reactor.cpp  reactor.h  shop.cpp  shop.h
src/decorations/: decoration.cpp  decoration.h
src/enemies/: boss.cpp  boss.h  enemy.cpp  enemy.h  skeleton.cpp  skeleton.h
src/include/: raygui.h  tileson.hpp
src/items/coins/: bronze_coin.cpp  bronze_coin.h
src/terrain/: collision_body.cpp  collision_body.h  ground_dark.cpp  ground_grass.cpp  ground_grass_left_corner.cpp  ground_grass_right_corner.cpp  ground_rock.cpp  terrain.cpp  terrain.h  wall_left.cpp  wall_right.cpp
src/utils/: where.cpp  where.h
tiled/: raylib_game.tiled-session
vs/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  raylib_game.sln  raylib_game.sln.DotSettings  raylib_game.vcxproj  raylib_game.vcxproj.filters
vs/assets/tiled/: Skeleton Walk.tsj  decorations.tsj  level1.json  raylib_game.tiled-session
